Add styling for button

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -8,13 +8,13 @@
   <title>Neuron app</title>
 </head>
 <body>
-<div class="top-background__container">
+<div class="gradient-background">
   <header class="header pt-4">
     <div class="container d-flex justify-content-between align-items-center">
       <img class="header__logo w-auto" src="assets/logo.png">
 
-      <div class="navigation">
-        <ul class="navigation__links-wrapper mb-0">
+      <div class="navigation d-flex">
+        <ul class="navigation__links-wrapper d-flex mb-0">
           <li class="navigation__link"><a>home</a></li>
           <li class="navigation__link"><a>about</a></li>
           <li class="navigation__link"><a>features</a></li>
@@ -23,7 +23,7 @@
           <li class="navigation__link"><a>blog</a></li>
           <li class="navigation__link"><a>contact</a></li>
         </ul>
-        <div class="navigation__icons-wrapper">
+        <div class="navigation__icons-wrapper d-flex">
           <i class="fas fa-shopping-basket"></i>
           <i class="fas fa-search"></i>
         </div>
@@ -33,10 +33,12 @@
 
   <div class="jumbo">
     <div class="container">
-      <h1 class="jumbo__title">
-        Transforming Enterprises with Computer Vision AI
-      </h1>
-      <button class="button">get started</button>
+      <div class="col-12 col-md-8 col-lg-6">
+        <h1 class="jumbo__title">
+          Transforming Enterprises with Computer Vision AI
+        </h1>
+        <button class="btn btn-primary">get started</button>
+      </div>
     </div>
   </div>
 </div>
