--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -13,6 +13,7 @@
     <div class="container d-flex justify-content-between align-items-center">
       <img class="header__logo w-auto" src="assets/logo.png">
 
+      <!-- looks bad in small vw FIX on lvl2 -->
       <div class="navigation d-flex">
         <ul class="navigation__links-wrapper d-flex mb-0">
           <li class="navigation__link"><a>home</a></li>
@@ -33,11 +34,16 @@
 
   <div class="jumbo">
     <div class="container">
-      <div class="col-12 col-md-8 col-lg-6">
-        <h1 class="jumbo__title">
-          Transforming Enterprises with Computer Vision AI
-        </h1>
-        <button class="btn btn-primary">get started</button>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <h1 class="jumbo__title">
+            Transforming Enterprises with Computer Vision AI
+          </h1>
+          <button class="btn btn-primary">get started</button>
+        </div>
+        <div class="col-12 col-md-6">
+          <img class="jumbo__image" src="assets/jumbo.jpg">
+        </div>
       </div>
     </div>
   </div>
@@ -70,7 +76,7 @@
       suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
       dolor
       sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
-    <button class="button--cta">check it out</button>
+    <button class="btn btn-primary">check it out</button>
   </div>
 </div>
 
@@ -94,7 +100,7 @@
         sit amet consectetur. Pellentesque massa placerat duis ultricies.
       </p>
     </div>
-    <button class="button--cta">check it out</button>
+    <button class="btn btn-primary">check it out</button>
   </div>
   <img class="feature__image">
 </div>
@@ -108,7 +114,7 @@
     <img class="group__image">
     <img class="group__image">
   </div>
-  <button class="button--cta">check it out</button>
+  <button class="btn btn-primary">check it out</button>
 </div>
 
 <div class="group">
@@ -118,7 +124,7 @@
       <h2 class="group__title">computer vision ai</h2>
     </div>
     <div>
-      <button class="button--cta">view all services</button>
+      <button class="btn btn-primary">view all services</button>
     </div>
   </div>
   <div class="card__container">
