Style partners group

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -49,15 +49,14 @@
   </div>
 </div>
 
-<div class="partners">
-  <div class="container">
-    <div class="row">
-      <div class="col mx-auto"><i class="fab fa-accusoft"></i> accusoft</div>
-      <div class="col mx-auto"><i class="fab fa-adobe"></i> adobe</div>
-      <div class="col mx-auto"><i class="fab fa-bitbucket"></i> bitbucket</div>
-      <div class="col mx-auto"><i class="fab fa-battle-net"></i> battlenet</div>
-      <div class="col mx-auto"><i class="fab fa-cc-amex"></i> american&nbsp;express</div>
-    </div>
+<div class="container">
+  <div class="row">
+    <!-- looks bad in small vw FIX on lvl2 -->
+    <h3 class="col mx-auto"><i class="fab fa-accusoft"></i> accusoft</h3>
+    <h3 class="col mx-auto"><i class="fab fa-adobe"></i> adobe</h3>
+    <h3 class="col mx-auto"><i class="fab fa-bitbucket"></i> bitbucket</h3>
+    <h3 class="col mx-auto"><i class="fab fa-battle-net"></i> battlenet</h3>
+    <h3 class="col mx-auto"><i class="fab fa-cc-amex"></i> american&nbsp;express</h3>
   </div>
 </div>
 
