Add styling for jumbo text

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -35,7 +35,7 @@
   <div class="jumbo">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="jumbo__text col-12 col-md-6">
           <h1 class="jumbo__title">
             Transforming Enterprises with Computer Vision AI
           </h1>
@@ -104,7 +104,7 @@
   <img class="feature__image">
 </div>
 
-<div class="group group--highlighted">
+<div class="group group--highlighted d-none">
   <div class="group__name">image segmentation</div>
   <h2 class="group__header">deep learning model for semantic image segmentation</h2>
 
@@ -116,7 +116,7 @@
   <button class="btn btn-primary">check it out</button>
 </div>
 
-<div class="group">
+<div class="group d-none">
   <div class="group__header">
     <div>
       <div class="group__name">why computer vision</div>
@@ -178,7 +178,7 @@
   </div>
 </div>
 
-<div class="group group--highlighted">
+<div class="group group--highlighted d-none">
   <div class="group__name">testimonials</div>
   <h2 class="group__header">happy client reviews</h2>
 
@@ -247,7 +247,6 @@
       <i class="far fa-star"></i>
     </div>
   </div>
-</div>
 </div>
 </body>
 </html>
