Add styling for partners v2

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -49,7 +49,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container partners">
   <div class="row">
     <!-- looks bad in small vw FIX on lvl2 -->
     <h3 class="col mx-auto"><i class="fab fa-accusoft"></i> accusoft</h3>
