Add styling for feature

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -61,21 +61,30 @@
 </div>
 
 <div class="feature">
-  <img class="feature__image">
-  <div class="feature__content">
-    <div class="feature__name">pose estimation</div>
-    <h2 class="feature__title">custom face recognition pose detection</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
-      ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
-      ante. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
-    <p>Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
-      nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
-      vitae
-      suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
-      dolor
-      sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
-    <button class="btn btn-primary">check it out</button>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <img class="feature__image">
+      </div>
+      <div class="col-6">
+        <div class="feature__content">
+          <div class="feature__name">pose estimation</div>
+          <h2 class="feature__title">custom face recognition pose detection</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
+            ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
+            ante. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
+          <p>Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
+            nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
+            vitae
+            suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
+            dolor
+            sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
+          <button class="btn btn-primary">check it out</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
