Add styling for features

--- a/simple_page/index.html
+++ b/simple_page/index.html
@@ -63,25 +63,23 @@
 <div class="feature">
   <div class="container">
     <div class="row">
-      <div class="col-6">
-        <img class="feature__image">
+      <div class="col-7 d-flex justify-content-center">
+        <img class="feature__image" src="assets/skate.jpg">
+        <img class="feature__image" src="assets/traffic.jpg">
       </div>
-      <div class="col-6">
+      <div class="col-5">
         <div class="feature__content">
-          <div class="feature__name">pose estimation</div>
+          <h6 class="feature__name my-3">pose estimation</h6>
           <h2 class="feature__title">custom face recognition pose detection</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
-            ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
-            ante. Vehicula ipsum a arcu cursus vitae congue mauris.</p>
-          <p>Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
-            nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
-            vitae
-            suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
-            dolor
-            sit amet consectetur. Pellentesque massa placerat duis ultricies.</p>
-          <button class="btn btn-primary">check it out</button>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Venenatis urna cursus eget nunc.
+          </p>
+          <p>
+            Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
+            nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis.
+          </p>
+          <button class="btn btn-primary mt-auto">check it out</button>
         </div>
       </div>
     </div>
@@ -89,28 +87,30 @@
 </div>
 
 <div class="feature">
-  <div class="feature__description-block">
-    <div class="feature__name">object detection</div>
-    <h2 class="feature__title">the most personalized object detection</h2>
-    <div class="feature__description">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Venenatis urna cursus eget nunc scelerisque. Nisl nunc mi ipsum faucibus vitae aliquet nec
-        ullamcorper sit. Ac odio tempor orci dapibus. Sed risus pretium quam vulputate dignissim suspendisse in est
-        ante. Vehicula ipsum a arcu cursus vitae congue mauris.
-      </p>
-      <p>
-        Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
-        nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis. Nunc congue nisi
-        vitae
-        suscipit tellus. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Interdum posuere lorem ipsum
-        dolor
-        sit amet consectetur. Pellentesque massa placerat duis ultricies.
-      </p>
+  <div class="container">
+    <div class="row">
+      <div class="col-5">
+        <div class="feature__content">
+          <h6 class="feature__name my-3">object detection</h6>
+          <h2 class="feature__title">the most personalized object detection</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Venenatis urna cursus eget nunc.
+          </p>
+          <p>
+            Nunc aliquet bibendum enim facilisis gravida. Et tortor at risus viverra adipiscing at in. Ullamcorper eget
+            nulla facilisi etiam dignissim. Congue quisque egestas diam in arcu cursus euismod quis.
+          </p>
+          <button class="btn btn-primary mt-auto">check it out</button>
+        </div>
+      </div>
+
+      <div class="col-7 d-flex justify-content-center">
+        <img class="feature__image" src="assets/traffic.jpg">
+        <img class="feature__image" src="assets/skate.jpg">
+      </div>
     </div>
-    <button class="btn btn-primary">check it out</button>
   </div>
-  <img class="feature__image">
 </div>
 
 <div class="group group--highlighted d-none">
